@@ -26,6 +26,7 @@ import com.google.common.base.Preconditions;
 import org.kiji.annotations.ApiAudience;
 import org.kiji.annotations.ApiStability;
 import org.kiji.schema.impl.CounterCellDecoder;
+import org.kiji.schema.impl.RawBytesCellDecoder;
 import org.kiji.schema.impl.SpecificCellDecoder;
 import org.kiji.schema.layout.CellSpec;
 
@@ -56,6 +57,8 @@ public final class SpecificCellDecoderFactory implements KijiCellDecoderFactory 
       case CLASS:
       case INLINE:
         return new SpecificCellDecoder<T>(cellSpec);
+      case RAW_BYTES:
+        return new RawBytesCellDecoder(cellSpec);
       case COUNTER:
         // purposefully forget the type (long) param of cell decoders for counters.
         @SuppressWarnings("unchecked")
