@@ -3,6 +3,7 @@
                               KijiSchema Release Notes
 
 Version 1.3.0
+  * SCHEMA-548. Introduce RAW_BYTES cell encoding that expose pure bytes cells.
   * SCHEMA-547. AtomicKijiPutter.checkAndCommit() can check for the
       non-existence of a cell.
   * SCHEMA-515. Exposes table and data request in HBaseKijiRowData.
